--- a/index.css
+++ b/index.css
@@ -14,6 +14,12 @@ body {
     background-color: aqua;
 }
 
+@media (min-width: 720px), (orientation: landscape) {
+    .hide-when-large {
+      display: none;
+    }
+  }
+
 .hamburger {
     position: absolute;
     right: 0;
